...
                    onClick = {
                        onNavigateBack()
                    },
                    modifier = Modifier
                        .padding(16.dp)
                        .align(Alignment.TopStart)
                        .testTag("back_to_videos")
                ) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                        contentDescription = stringResource(R.string.back_icon_description),
                        tint = Color.White
                    )
                }
                AndroidView(
                    modifier = Modifier
                        .fillMaxSize()
                        .aspectRatio(16f / 9f)
                        .testTag("player_view"),
                    factory = {
                        PlayerView(context).apply {
                            player = viewModel.exoPlayer

                            resizeMode = AspectRatioFrameLayout.RESIZE_MODE_FIT

...
