<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="search_video_label">Search Video</string>
    <string name="clear_text_icon_description">Clear text</string>
    <string name="video_thumbnail_description">Video thumbnail</string>
    <string name="play_video_icon_description">Play Video icon</string>
</resources>