...
    videoItem: VideoItem,
    onNavigateToPlayback: (VideoItem) -> Unit,
) {
    Surface(
        modifier = Modifier
            .clickable { onNavigateToPlayback(videoItem) }
            .testTag("video_item"),
        shape = RoundedCornerShape(8.dp),
        shadowElevation = 4.dp,
        color = MaterialTheme.colorScheme.surface
    ) {
        Box(
            modifier = Modifier
...
